--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID=GuruBot~0vytUUEy
 REMOVEBG_KEY=
 PREFIX=
 MODE=
