--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SESSION_ID=GuruBot~0vytUUEy
 REMOVEBG_KEY=
 PREFIX=
 MODE=
-autoRead=
+autoRead=true
 statusview=
 OWNERS=6287854791914
+WM=Aoi by Pauku
