--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
         "src": "src",
         "plugins": "plugins"
     },
+    "nodemonConfig": {
+        "ignore": [
+            "session/*",
+            "*.json"
+        ]
+    },
     "engines": {
-        "node": ">=20.0.0" 
-      },
+        "node": ">=20.0.0"
+    },
     "scripts": {
-        "start": "node index.js",
+        "start": "nodemon index.js",
         "test": "node test.js"
     },
     "keywords": [
@@ -46,7 +52,7 @@
         "@google/generative-ai": "0.1.3",
         "@shineiichijo/marika": "^2.0.6",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "^6.6.0",
+        "@whiskeysockets/baileys": "github:BochilGaming/BaileySockets#patch-edit-message",
         "@xct007/frieren-scraper": "*",
         "@xct007/tiktok-scraper": "*",
         "acrcloud": "^1.4.0",
