--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "node-fetch": "^3.3.1",
         "node-gtts": "^2.0.2",
         "node-webpmux": "^3.1.3",
+        "nodemon": "^3.1.1",
         "pastebin-js": "^1.0.6",
         "pdfkit": "^0.13.0",
         "perf_hooks": "^0.0.1",
