Added my project

--- a/session/app-state-sync-key-AAAAAOJ8.json
+++ b/session/app-state-sync-key-AAAAAOJ8.json
@@ -1,1 +1,1 @@
-{"keyData":"NRaVl2X/hod0F3mr8khLrBYW7K8LEcGt+18Db0gRR1c=","fingerprint":{"rawId":532857345,"currentIndex":1,"deviceIndexes":[0,1]},"timestamp":"1716627773347"}
+{"keyData":"NRaVl2X/hod0F3mr8khLrBYW7K8LEcGt+18Db0gRR1c=","fingerprint":{"rawId":532857345,"currentIndex":1,"deviceIndexes":[0,1]},"timestamp":"0"}
