--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
         "node": ">=20.0.0"
     },
     "scripts": {
-        "start": "node index.js",
-        "nodemon": "nodemon index.js",
+        "start": "pm2 start index.js --watch --ignore-watch=\"./sessions ./session ./.cache ./*.json ./*.tmp\" && pm2 logs",
         "test": "node test.js"
     },
     "keywords": [
@@ -85,7 +84,7 @@
         "imgur": "2.3.0",
         "instagram-url-direct": "^1.0.12",
         "jimp": "^0.16.1",
-        "jsdom": "^20.0.1",
+        "jsdom": "^20.0.3",
         "knights-canvas": "^1.3.7-a",
         "link-preview-js": "^3.0.0",
         "lodash": "^4.17.21",
@@ -96,12 +95,13 @@
         "node-fetch": "^3.3.1",
         "node-gtts": "^2.0.2",
         "node-webpmux": "^3.1.3",
-        "nodemon": "^3.1.1",
+        "nodemon": "^3.1.2",
         "pastebin-js": "^1.0.6",
         "pdfkit": "^0.13.0",
         "perf_hooks": "^0.0.1",
         "pino": "^8.6.1",
         "pino-pretty": "^9.1.1",
+        "pm2": "^5.4.0",
         "qrcode": "^1.5.1",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
