--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "chalk": "^5.1.0",
         "cheerio": "^1.0.0-rc.12",
         "chess.js": "*",
+        "cloudscraper": "^4.6.0",
         "colors": "1.4.0",
         "didyoumean": "^1.2.2",
         "dotenv": "^16.1.4",
@@ -102,9 +103,14 @@
         "pino": "^8.6.1",
         "pino-pretty": "^9.1.1",
         "pm2": "^5.4.0",
+        "puppeteer": "^22.10.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
         "qrcode": "^1.5.1",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.6",
         "similarity": "^1.2.1",
         "socket.io": "^4.5.2",
         "syntax-error": "^1.4.0",
